--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
   },
   "dependencies": {
     "@studio-freight/lenis": "^1.0.42",
+    "bcryptjs": "^3.0.2",
     "framer-motion": "^12.23.12",
     "lucide-react": "^0.541.0",
     "mongoose": "^8.18.0",
     "next": "15.5.0",
+    "nodemailer": "^7.0.6",
+    "razorpay": "^2.9.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-hot-toast": "^2.6.0",
