--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
     "lint": "eslint"
   },
   "dependencies": {
-    "@studio-freight/lenis": "^1.0.42",
     "bcryptjs": "^3.0.2",
     "framer-motion": "^12.23.12",
+    "lenis": "^1.3.11",
     "lucide-react": "^0.541.0",
     "mongoose": "^8.18.0",
     "next": "15.5.0",
